@@ -1,22 +1,30 @@
 package com.codestates.stackoverflowclone.security.config;
 
 import com.codestates.stackoverflowclone.security.filter.JwtAuthenticationFilter;
+import com.codestates.stackoverflowclone.security.filter.JwtVerificationFilter;
+import com.codestates.stackoverflowclone.security.handler.MemberAuthenticationEntryPoint;
+import com.codestates.stackoverflowclone.security.handler.OAuth2MemberSuccessHandler;
 import com.codestates.stackoverflowclone.security.jwt.JwtTokenizer;
+import com.codestates.stackoverflowclone.security.util.CustomAuthorityUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.oauth2.client.web.OAuth2LoginAuthenticationFilter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -25,11 +33,18 @@ public class SecurityConfiguration {
 
     private final JwtTokenizer jwtTokenizer;
     private final ApplicationEventPublisher publisher;
+    private final CustomAuthorityUtils authorityUtils;
+
+    @Value("$spring.security.oauth2.client.registration.google.client-id")
+    private String clientId;
+    @Value("$spring.security.oauth2.client.registration.google.client-secret")
+    private String clientSecret;
 
     @Autowired
-    public SecurityConfiguration(JwtTokenizer jwtTokenizer, ApplicationEventPublisher publisher) {
+    public SecurityConfiguration(JwtTokenizer jwtTokenizer, ApplicationEventPublisher publisher, CustomAuthorityUtils authorityUtils) {
         this.jwtTokenizer = jwtTokenizer;
         this.publisher = publisher;
+        this.authorityUtils = authorityUtils;
     }
 
     @Bean
@@ -39,14 +54,31 @@ public class SecurityConfiguration {
                 .and()
                 .csrf().disable()
                 .cors(withDefaults())
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and()
                 .formLogin().disable()
                 .httpBasic().disable()
+                .exceptionHandling()
+                .authenticationEntryPoint(new MemberAuthenticationEntryPoint())
+//                .accessDeniedHandler(new MemberAccessDeniedHandler())
+                .and()
                 .apply(new CustomFilterConfigurer())
+                .and()
+                .logout().logoutSuccessUrl("/")
                 .and()
                 .authorizeHttpRequests(
                         //TODO 권한 설정하기
-                        authorize -> authorize.anyRequest().permitAll()
-                );
+                        authorize -> authorize
+                                .antMatchers(HttpMethod.PATCH, "/members/**").hasRole("USER")
+                                .antMatchers(HttpMethod.DELETE, "/members/**").hasRole("USER")
+                                .antMatchers(HttpMethod.POST, "/answers/**").hasRole("USER")
+                                .antMatchers(HttpMethod.PATCH, "/answers/**").hasRole("USER")
+                                .antMatchers(HttpMethod.DELETE, "/answers/**").hasRole("USER")
+                                .anyRequest().permitAll()
+                )
+                .oauth2Login(oauth2 -> oauth2
+                        .successHandler(new OAuth2MemberSuccessHandler(jwtTokenizer, authorityUtils)))
+                ;
         return http.build();
     }
 
@@ -59,8 +91,9 @@ public class SecurityConfiguration {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "DELETE"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "DELETE", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -73,7 +106,13 @@ public class SecurityConfiguration {
             AuthenticationManager manager = builder.getSharedObject(AuthenticationManager.class);
             JwtAuthenticationFilter filter = new JwtAuthenticationFilter(manager, jwtTokenizer, publisher);
             filter.setFilterProcessesUrl("/login");
-            builder.addFilter(filter);
+
+            JwtVerificationFilter jwtVerificationFilter = new JwtVerificationFilter(jwtTokenizer, authorityUtils);
+
+            builder.addFilter(filter)
+                    .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class)
+                    .addFilterAfter(jwtVerificationFilter, OAuth2LoginAuthenticationFilter.class);
         }
     }
+
 }
